--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"/>
     <link rel="stylesheet" type="text/css" href="libs/slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="libs/slick/slick-theme.css"/>
     <link rel="stylesheet" href="style.css">
@@ -25,8 +25,15 @@
                     </ul>
                 </nav>
                 <div class="head__right">
-                    <div class="head__right--drop">ENG</div>
-                    <img src="img/dropdown.svg" alt="выпадающее меню" class="head__right--img">
+                    <div class="head__right--drop" id="language">ENG</div>
+                    <div class="head__right__menu">
+                        <ul>
+                            <li><a href="#">RUS</a></li>
+                            <li><a href="#">FRA</a></li>
+                            <li><a href="#">DEU</a></li>
+                        </ul>
+                    </div>
+                    <img src="img/dropdown.svg" alt="выпадающее меню" class="head__right--img" id="dropdown"> 
                     <div class="head__right--icons">
                         <img src="img/xbox_icon.svg" alt="xbox">
                         <img src="img/steam_icon.svg" alt="steam">
@@ -40,7 +47,7 @@
             </div>
             <div class="head__foot container">
                 <span>The Story</span>
-                <img src="img/scroll_down.svg" alt="стрелка вниз">
+                <img src="img/scroll_down.svg" alt="стрелка вниз" id="scrollImg">
             </div>
         </div>
     </header>
@@ -75,6 +82,20 @@
             </div>
         </div>
     </section>
+    <section class="three">
+        <div class="features">
+            <h3>What’s so special?</h3>
+            <h2>features</h2>
+            <div>
+                <span class="feature__bold">SURVIVE AT ALL COSTS</span>
+                <span class="feature__sub">You have 30 minutes to find a relic, signal for extraction, and grab
+                    one of three spots on the rescue chopper.</span>
+                <span class="feature__bold">CREATE ALLIES AND ENEMIES</span>
+                <span class="feature__bold">IMPRESS THE AUDIENCE</span>
+            </div>
+        </div>
+    </section>
+
 
     
     
@@ -82,16 +103,6 @@
     <script src="https://code.jquery.com/jquery-migrate-3.3.1.min.js" integrity="sha256-APllMc0V4lf/Rb5Cz4idWUCYlBDG3b0EcN1Ushd3hpE=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="libs/slick/slick.min.js"></script>
     <script src="script.js"></script> 
-    <script>
-        $(document).ready(function(){
-    $('.gallary__pics__box').slick({
-        dots: true,
-        infinite: true,
-        speed: 300,
-        slidesToShow: 1,
-        adaptiveHeight: true
-    });
-});
-    </script>
+
 </body>
 </html>
