four and five section

--- a/index.html
+++ b/index.html
@@ -95,6 +95,51 @@
             </div>
         </div>
     </section>
+    <section class="four">
+        <div class="container requir">
+            <h3>Can My Computer Run this game?</h3>
+            <h2>system requirements</h2>
+            <div class="requirements">
+                <div class="requirements__items">
+                    <div class="requirements__items__item">
+                        <span>OS:</span>
+                        <p>Windows 7 64-bit only(No OSX support at this time)
+                        </p>
+                    </div>
+                    <div class="requirements__items__item">
+                        <span>PROCESSOR:</span>
+                        <p>Intel Core 2 Duo @ 2.4 GHZ or AMD Athlon X2 @ 2.8 GHZ</p>
+                    </div>
+                    <div class="requirements__items__item">
+                        <span>MEMORY:</span>
+                        <p>8 GB RAM</p>
+                    </div>
+                    <div class="requirements__items__item">
+                        <span>STORAGE:</span>
+                        <p>8 GB available space</p>
+                    </div>
+                </div>
+                <div class="requirements__items__grafics">
+                    <span>GRAPHICS:</span>
+                    <p>NVIDIA GeForce GTX 660 2GB or  AMD Radeon HD 7850 2GB DirectX11 (Shader Model 5)</p>
+                    <div class="requirements__items__grafics__border"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="five">
+        <div class="container quotes">
+            <div class="quotes__left">
+                <h3>What people think?</h3>
+                <h2>Press quotes</h2>
+                <p>Our goal is to create a product and service that you’re satisfied with and use it every day. This is why we’re constantly working on our services to make it better every day and really listen to what our users has to say.</p>
+                <a href="#">read more testimonials</a>
+            </div>
+            <div class="quotes__right"></div>
+
+        </div>
+
+    </section>
 
 
     
