--- a/index.html
+++ b/index.html
@@ -133,13 +133,68 @@
                 <h3>What people think?</h3>
                 <h2>Press quotes</h2>
                 <p>Our goal is to create a product and service that you’re satisfied with and use it every day. This is why we’re constantly working on our services to make it better every day and really listen to what our users has to say.</p>
-                <a href="#">read more testimonials</a>
+                <a href="#" class="head__content--btn">read more testimonials</a>
             </div>
-            <div class="quotes__right"></div>
-
+            <div class="quotes__right">
+                <div class="quotes__card">
+                    <div class="quotes__card__head">
+                        <div class="quotes__card__photo">
+                            <img src="img/photo1.jpg" alt="Evan Lahti">
+                            <span></span>
+                        </div>
+                        <div class="quotes__card__personal">
+                            <span class="quotes__card--name">Evan Lahti</span>
+                            <span class="quotes__card--work">PC Gamer</span>
+                        </div>
+                        <div class="quotes__card--twit">
+                            <img src="img/twitter.svg" alt="twitter">
+                        </div>
+                    </div>
+                    <blockquote>“One of my gaming highlights of the year.”</blockquote>
+                    <time>October 18, 2018</time>
+                </div>
+                <div class="quotes__card">
+                    <div class="quotes__card__head">
+                        <div class="quotes__card__photo">
+                            <img src="img/photo2.jpg" alt="Evan Lahti">
+                            <span></span>
+                        </div>
+                        <div class="quotes__card__personal">
+                            <span class="quotes__card--name">Jada Griffin </span>
+                            <span class="quotes__card--work">Nerdreactor
+                            </span>
+                        </div>
+                        <div class="quotes__card--twit">
+                            <img src="img/twitter.svg" alt="twitter">
+                        </div>
+                    </div>
+                    <blockquote>“The next big thing in the world of streaming and survival games.”
+                    </blockquote>
+                    <time>December 21, 2018</time>
+                </div>
+                <div class="quotes__card">
+                    <div class="quotes__card__head">
+                        <div class="quotes__card__photo">
+                            <img src="img/photo3.jpg" alt="Evan Lahti">
+                            <span></span>
+                        </div>
+                        <div class="quotes__card__personal">
+                            <span class="quotes__card--name">Aaron Williams </span>
+                            <span class="quotes__card--work">Uproxx</span>
+                        </div>
+                        <div class="quotes__card--twit">
+                            <img src="img/twitter.svg" alt="twitter">
+                        </div>
+                    </div>
+                    <blockquote>“Snoop Dogg Playing The Wildly Entertaining ‘SOS’ Is Ridiculous.”</blockquote>
+                    <time>December 24, 2018</time>
+                </div>
+            </div>
         </div>
-
     </section>
+    <footer>
+        
+    </footer>
 
 
     
