--- a/index.html
+++ b/index.html
@@ -201,12 +201,12 @@
                 <h3>Want to stay in touch?</h3>
                 <h2>newsletter SUBSCRIBE </h2>
                 <p>In order to start receiving our news, all you have to do is enter your email address. Everything else will be taken care of by us. We will send you emails containing information about game. We don’t spam.</p>
-                <div>
-                    <div>
+                <div class="newsletter__right-btn">
+                    <div class="newsletter__right-adress">
                         <label for="email">Your email address</label>
-                        <input type="text" placeholder="aliciliniavopir@gmail.com" id="email">
+                        <input type="text" placeholder="kysov2006@bk.ru" id="email">
                     </div>
-                    <button>Subscribe now</button>
+                    <a href="#" class="newsletter__right-subscribe">Subscribe now</a>
                 </div>
             </div>   
         </div>
@@ -216,9 +216,29 @@
             <div>
                 <img src="/img/logo.png" alt="логотип компании">
             </div>
-            <ul>
-                
-            </ul>
+            <div class="footer__nav">
+                <ul class="footer__nav-menu">
+                    <li><a href="#">MAIN</a></li>
+                    <li><a href="#">about</a></li>
+                    <li><a href="#">game features</a></li>
+                    <li><a href="#">System requirements</a></li>
+                    <li><a href="#">quotes</a></li>
+                </ul>
+                <ul class="footer__nav-social">
+                    <li><a href="#">fb </a></li>
+                    <li><a href="#">tweet</a></li>
+                    <li><a href="#">youtube</a></li>
+                    <li><a href="#">twitch</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="container subfooter">
+            <span class="subfooter__copy"> © 2018 Outpost Games, Inc. All Rights Reserved</span>
+            <div class="subfooter__policy">
+                <span class="subfooter__policy-item">Privacy Policy</span>
+                <span class="subfooter__policy-item">Terms of Services</span>
+                <span class="subfooter__policy-item">Code of Conduct </span>
+            </div> 
         </div>
     </footer>
 
