--- a/index.html
+++ b/index.html
@@ -41,7 +41,28 @@
                 </div>
             </div>
             <div class="head__content container">
-                <h1>SURVIVE AT ALL COSTS</h1>
+                <h1>
+                    <span>S</span>       
+                    <span>U</span>
+                    <span>R</span>
+                    <span>V</span>
+                    <span>I</span>
+                    <span>V</span>
+                    <span>E</span>
+                    <span>&#160;</span>
+                    <span>A</span>
+                    <span>T</span>
+                    <span>&#160;</span>
+                    <span>A</span>
+                    <span>L</span>
+                    <span>L</span>
+                    <span>&#160;</span>
+                    <span>C</span>
+                    <span>O</span>
+                    <span>S</span>
+                    <span>T</span>
+                    <span>S</span>
+                </h1>
                 <h3 class="head__content--subtitle">Experience new social battle royale game</h3>
                 <a class="head__content--btn" href="#"><span class="head__content--buy">Buy now on Steam</span><span>$14.99</span></a>
             </div>
@@ -247,6 +268,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-migrate-3.3.1.min.js" integrity="sha256-APllMc0V4lf/Rb5Cz4idWUCYlBDG3b0EcN1Ushd3hpE=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="libs/slick/slick.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
     <script src="script.js"></script> 
 
 </body>
