--- a/index.html
+++ b/index.html
@@ -246,10 +246,56 @@
                     <li><a href="#">quotes</a></li>
                 </ul>
                 <ul class="footer__nav-social">
-                    <li><a href="#">fb </a></li>
-                    <li><a href="#">tweet</a></li>
-                    <li><a href="#">youtube</a></li>
-                    <li><a href="#">twitch</a></li>
+                    <li>
+                        <a href="#">
+                            <svg viewBox="0 0 97.75 97.75">
+                                <g>
+                                    <path d="M48.875,0C21.882,0,0,21.882,0,48.875S21.882,97.75,48.875,97.75S97.75,75.868,97.75,48.875S75.868,0,48.875,0z
+                                    M67.521,24.89l-6.76,0.003c-5.301,0-6.326,2.519-6.326,6.215v8.15h12.641L67.07,52.023H54.436v32.758H41.251V52.023H30.229V39.258
+                                    h11.022v-9.414c0-10.925,6.675-16.875,16.42-16.875l9.851,0.015V24.89L67.521,24.89z"/>
+                                </g>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <svg viewBox="0 0 169.063 169.063">
+                                <g>
+                                    <path d="M122.406,0H46.654C20.929,0,0,20.93,0,46.655v75.752c0,25.726,20.929,46.655,46.654,46.655h75.752
+                                        c25.727,0,46.656-20.93,46.656-46.655V46.655C169.063,20.93,148.133,0,122.406,0z M154.063,122.407
+                                        c0,17.455-14.201,31.655-31.656,31.655H46.654C29.2,154.063,15,139.862,15,122.407V46.655C15,29.201,29.2,15,46.654,15h75.752
+                                        c17.455,0,31.656,14.201,31.656,31.655V122.407z"/>
+                                    <path d="M84.531,40.97c-24.021,0-43.563,19.542-43.563,43.563c0,24.02,19.542,43.561,43.563,43.561s43.563-19.541,43.563-43.561
+                                        C128.094,60.512,108.552,40.97,84.531,40.97z M84.531,113.093c-15.749,0-28.563-12.812-28.563-28.561
+                                        c0-15.75,12.813-28.563,28.563-28.563s28.563,12.813,28.563,28.563C113.094,100.281,100.28,113.093,84.531,113.093z"/>
+                                    <path d="M129.921,28.251c-2.89,0-5.729,1.17-7.77,3.22c-2.051,2.04-3.23,4.88-3.23,7.78c0,2.891,1.18,5.73,3.23,7.78
+                                        c2.04,2.04,4.88,3.22,7.77,3.22c2.9,0,5.73-1.18,7.78-3.22c2.05-2.05,3.22-4.89,3.22-7.78c0-2.9-1.17-5.74-3.22-7.78
+                                        C135.661,29.421,132.821,28.251,129.921,28.251z"/>
+                                </g>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <svg viewBox="0 0 215.094 215.094">
+                                <g>
+                                    <path d="M28.302,32.547C12.673,32.547,0,45.22,0,60.849v93.396c0,15.629,12.673,28.302,28.302,28.302h158.491
+                                    c15.629,0,28.301-12.673,28.301-28.302V60.849c0-15.629-12.672-28.302-28.301-28.302H28.302z M90.547,145.583V69.511l50,38.036
+                                    L90.547,145.583z"/>
+                                </g>  
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <svg viewBox="0 0 512 512" 
+                                <g>
+                                    <path d="m0 68.789062v383.210938h120v60h82.210938l60-60h151l98.789062-98.789062v-353.210938h-443.210938zm90-8.789062h362v233.210938l-68.789062 68.789062h-121l-81.210938 81.210938v-81.210938h-91zm0 0"/>
+                                    <path d="m211 370.789062 38.789062-38.789062h121l51.210938-51.210938v-190.789062h-302v242h91zm121-205.789062h30v92h-30zm-91 0h30v92h-30zm0 0"/>
+                                </g>
+                            </svg>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
