--- a/index.html
+++ b/index.html
@@ -6,14 +6,20 @@
     <link rel="stylesheet" type="text/css" href="libs/slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="libs/slick/slick-theme.css"/>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="adaptive.css">
     <title>Game Landing</title>
 </head>
 <body>
     <header>
+        <button class="head__burger">
+            <span></span>
+        </button>
         <div class="head">
             <div class="head__head container">
                 <div class="head__logo">
-                    <img src="img/logo.png" alt="Логотоип компании" class="head__logo--img">
+                    <a href="/">
+                        <img src="img/logo.png" alt="Логотоип компании" class="head__logo--img">
+                    </a>
                 </div>
                 <nav class="head__navigation">
                     <ul>
